updated listings html and added pictures

--- a/listings.html
+++ b/listings.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Craigslist</title>
   <a href="#" class="loginbutton2" target="_blank">Hello, User!</a>
   <a href="createapost.html" class="postbutton2" target="_blank">Create a post</a>
-  <link rel = "stylesheet" href = "style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <h1>Advertisement listings</h1>
-    <img src = "logo.png" alt = "craigslist logo" class="logo">
+    <img src="logo.png" alt="craigslist logo" class="logo">
   </header>
   <main>
     <section id="Advertisement">
-      <div
-      class="flex-container2">
-      <div
-      class="flex"></div>
-      <img src="activities.PNG" alt="activities">
-      <div
-      class="flex"></div>
-      <img src="classes.PNG" alt="classes">
-      <div
-      class="flex"></div>
-      <img src="general.PNG" alt="general">
+      <div class="flex-container2">
+        <img src="adv.JPG" alt="lost and found">
+        <img src="adv1.JPG" alt="services">
+        <img src="adv2.JPG" alt="jewelry">
+        <img src="adv3.JPG" alt="legal services">
+        <img src="adv4.JPG" alt="sale">
+        <img src="adv5.JPG" alt="financial services">
       </div>
+    </section>
   </main>
-  <footer> 
+  <footer>
     <p>Copyright 2023</p>
   </footer>
 </body>
+
 </html>
