--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>The World's Largest Classified Advertisement Website</h1>
-    <img src = "logo.png" alt = "craigslist logo" class="logo">
+    <img src = "images/logo.png" alt = "craigslist logo" class="logo">
   </header>
   <main>
     <section id="search">
@@ -23,15 +23,18 @@
       class="flex-container">
       <div
       class="flex"></div>
-      <img src="community.png" alt="Community">
+      <a href="listings.html" target = "self">
+      <img src="images/community.png" alt="Community"></a>
       <div
       class="flex"></div>
-      <img src="housing.jpg" alt="Housing">
+      <a href="listings.html" target = "self">
+      <img src="images/housing.jpg" alt="Housing"></a>
       <div
       class="flex"></div>
-      <img src="others.png" alt="Others">
+      <a href="listings.html" target = "self">
+      <img src="images/others.png" alt="Others"></a>
       </div>
-      <a href="listings.html" class="listingbutton" target="_blank">View listings!</a>
+      
   </main>
   <footer> 
     <p>Copyright 2023</p>
