picture location updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>The World's Largest Classified Advertisement Website</h1>
-    <img src = "images/logo.png" alt = "craigslist logo" class="logo">
+    <img src = "logo.png" alt = "craigslist logo" class="logo">
   </header>
   <main>
     <section id="search">
@@ -24,15 +24,15 @@
       <div
       class="flex"></div>
       <a href="listings.html" target = "self">
-      <img src="images/community.png" alt="Community"></a>
+      <img src="community.png" alt="Community"></a>
       <div
       class="flex"></div>
       <a href="listings.html" target = "self">
-      <img src="images/housing.jpg" alt="Housing"></a>
+      <img src="housing.jpg" alt="Housing"></a>
       <div
       class="flex"></div>
       <a href="listings.html" target = "self">
-      <img src="images/others.png" alt="Others"></a>
+      <img src="others.png" alt="Others"></a>
       </div>
       
   </main>
