--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
     <img src="logo.png" alt="craigslist logo" class="logo2">
+    <script src="test.js"></script>
 </head>
 <body>
     <div class="container2">
@@ -29,7 +30,7 @@
 
     <script>
         function redirectToHomepage() {
-            // You can replace "homepage.html" with the actual URL of your homepage
+
             window.location.href = "index.html";
         }
     </script>
