--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
     <script>
         function redirectToHomepage() {
 
-            window.location.href = "index.html";
+            window.location.href = "homepage after login.html";
         }
     </script>
 </body>
