--- a/postcreated.html
+++ b/postcreated.html
@@ -12,8 +12,8 @@
     <img src="logo.png" alt="craigslist logo" class="logo">
   </header>
   <main>
-    <div class="image-container">
-      <img src="points.JPG" alt="points earned" style="width: 80%">
+    <div class="container2">
+      <h1 id="centered-text">You have successfully earned 10 points!</h1>
     </div>
   </main>
   <footer>
