purchase page completed

--- a/listings.html
+++ b/listings.html
@@ -3,8 +3,6 @@
 
 <head>
   <title>Craigslist</title>
-  <a href="#" class="loginbutton2" target="_blank">Hello, User!</a>
-  <a href="createapost.html" class="postbutton2" target="_blank">Create a post</a>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,18 +11,38 @@
     <h1>Advertisement listings</h1>
     <img src="logo.png" alt="craigslist logo" class="logo">
   </header>
+
   <main>
     <section id="Advertisement">
       <div class="flex-container2">
-        <img src="adv.JPG" alt="lost and found">
-        <img src="adv1.JPG" alt="services">
-        <img src="adv2.JPG" alt="jewelry">
-        <img src="adv3.JPG" alt="legal services">
-        <img src="adv4.JPG" alt="sale">
-        <img src="adv5.JPG" alt="financial services">
-      </div>
+        <a href="lost-and-found.html" class="image-button">
+          <img src="adv.JPG" alt="lost and found">
+        </a>
+
+        <a href="services.html" class="image-button">
+          <img src="adv1.JPG" alt="services">
+        </a>
+
+        <a href="diamond ring.html" class="image-button">
+          <img src="adv2.JPG" alt="jewelery">
+        </a>
+
+        <a href="legal services.html" class="image-button">
+          <img src="adv3.JPG" alt="legal services">
+        </a>
+
+        <a href="sale.html" class="image-button">
+          <img src="adv4.JPG" alt="sale">
+        </a>
+
+        <a href="financial services.html" class="image-button">
+          <img src="adv5.JPG" alt="financial services">
+        </a>
+
+        </div>
     </section>
   </main>
+
   <footer>
     <p>Copyright 2023</p>
   </footer>
