payment page and order page created

--- a/completedpayment.html
+++ b/completedpayment.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <h1>Purchase</h1>
+    <h1>Successful Payment</h1>
     <img src="logo.png" alt="craigslist logo" class="logo">
   </header>
   <main>
-    <div>
-        <img src="ring.JPG" alt="Diamond ring" class="image1">
-        <a href="paymentdetails.html" class="image-button">Purchase Now</a>
+    <div class="container2">
+      <h1 id="centered-text">You have successfully placed your order!</h1>
+      <h1 id="centered-text">You have earned 710 points!</h1>
     </div>
   </main>
   <footer>
