--- a/listings.html
+++ b/listings.html
@@ -14,7 +14,7 @@
 
   <main>
     <section id="Advertisement">
-      <div class="flex-container2">
+      <div class="image-container3">
         <a href="lost-and-found.html" class="image-button">
           <img src="adv.JPG" alt="lost and found">
         </a>
