--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <img src="logo.png" alt="craigslist logo" class="logo2">
     <script src="test.js"></script>
+    <script src="lottie.js"></script>
 </head>
 <body>
     <div class="container2">
