loading page done

--- a/loading page.html
+++ b/loading page.html
@@ -1,1 +1,4 @@
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player src="https://lottie.host/b082c964-b92c-4610-aa22-51928298be5c/q6Xj4rOikq.json" background="##FFFFFF" speed="1"  loop autoplay direction="1" mode="normal"></lottie-player>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script><lottie-player src="https://lottie.host/564a1272-ef63-48d4-9289-bfd5820ba17d/02lKALSLw5.json" 
+background="##FFFFFF" speed="1" loop autoplay direction="1" mode="normal"></lottie-player>
+
+<script src ="lottie.js"></script>
