updated login js

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
     <img src="logo.png" alt="craigslist logo" class="logo2">
-    <script src="test.js"></script>
+    <script src="login.html"></script>
     <script src="lottie.js"></script>
 </head>
 <body>
