Update homepage after login.html

--- a/homepage after login.html
+++ b/homepage after login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Craigslist</title>
-  <a href="#" class="loginbutton2" target="_blank">Hello, User!</a>
+  <a href="pointspage.html" class="loginbutton2" target="_blank">Hello, User!</a>
   <a href="createapost.html" class="postbutton2" target="_blank">Create a post</a>
   <link rel = "stylesheet" href = "style.css">
 </head>
