--- a/pointspage.html
+++ b/pointspage.html
@@ -75,7 +75,7 @@
           <option value="100">$25 Starbucks Gift Card (100 points)</option>
         </select>
         <br />
-        <img id = "reward-image" src="images/mcd.jpg" alt="Vouchers"
+        <img id = "reward-image" src="images/mcd.png" alt="Vouchers"
         height="500px" width="500px" margin="0" auto />
 
         <label for="quantity">Quantity:</label>
